--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           Open the Browser Console to view your work (Right-Click => Inspect or
           fn+F12)
         </p>
+        <p id="feedback"></p>
         <div id="inputContainer">
           <label for="searchWord">Giphy Search:</label>
           <input style="margin: 2rem" type="text" id="searchWord" />
@@ -28,6 +29,7 @@
 
         <div id="imageContainer" style="max-width: 680px">
           <img
+            id="image123"
             src="#"
             alt="Giphy Selection"
             style="width: 100%; height: auto"
